✨feat : 특정 카테고리에서 시험 전체 조회